--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -109,7 +109,7 @@ $navItem-hightlight: #F5FAFE;
 }
 
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 676px) {
     .header {
         nav {
             min-height: 600px;
@@ -421,7 +421,7 @@ $navItem-hightlight: #F5FAFE;
     }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 675px) {
     .header {
         nav {
             width: 100vw;
