--- a/styles/user.module.scss
+++ b/styles/user.module.scss
@@ -15,7 +15,7 @@ $table-pagination-background: #D9E6F3;
     height: inherit;
 }
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 676px) {
     .main {
         padding-top: 40px;
         margin: auto 49px;
@@ -339,7 +339,8 @@ $table-pagination-background: #D9E6F3;
 
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 675px) {
+
     .main {
         margin: 89px 15px 92px 15px;
         transition: all 0.35s;
@@ -598,6 +599,7 @@ $table-pagination-background: #D9E6F3;
         }
 
         .companyUserTablePaginationWrapper {
+
             .companyInvoiceTablePagination {
                 margin-top: 30px;
                 margin-bottom: 70px;
